add:sort to episodes

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ plugins/*
 !plugins/contact-form-7
 !plugins/advanced-custom-fields-pro
 !plugins/yet-another-related-posts-plugin
+!plugins/wp-postviews
 
 
 
