add:plugin,chakra functionality and style navi

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ plugins/*
 !plugins/advanced-custom-fields-pro
 !plugins/yet-another-related-posts-plugin
 !plugins/wp-postviews
+!plugins/chakra-functionality
 
 
 
