--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ themes/my7chakras/node_modules/*
 # ================== #
 themes/my7chakras/gulpfile.js
 themes/my7chakras/build/*
+
+!themes/build/js/flickity.pkgd.min.js
